@@ -1,0 +1,114 @@
+   24.274   47.792   19.835   0.200   24.176   49.165   20.487   0.200  0.625  0.625  0.625
+   24.274   47.792   19.835   0.200   23.626   47.634   19.545   0.200  0.625  0.625  0.625
+   23.626   47.634   19.545   0.200   22.979   47.477   19.256   0.200  0.750  0.050  0.050
+   24.274   47.792   19.835   0.200   24.718   47.861   19.285   0.200  0.625  0.625  0.625
+   24.718   47.861   19.285   0.200   25.162   47.930   18.736   0.200  0.750  0.050  0.050
+   24.176   49.165   20.487   0.200   24.830   49.338   20.739   0.200  0.625  0.625  0.625
+   24.830   49.338   20.739   0.200   25.483   49.510   20.991   0.200  0.750  0.050  0.050
+   24.176   49.165   20.487   0.200   23.209   49.050   21.658   0.200  0.625  0.625  0.625
+   23.209   49.050   21.658   0.200   23.133   49.708   21.931   0.200  0.625  0.625  0.625
+   23.133   49.708   21.931   0.200   23.057   50.366   22.204   0.200  0.750  0.050  0.050
+   23.209   49.050   21.658   0.200   21.835   48.584   21.103   0.200  0.625  0.625  0.625
+   21.835   48.584   21.103   0.200   21.555   49.071   20.679   0.200  0.625  0.625  0.625
+   21.555   49.071   20.679   0.200   21.274   49.559   20.255   0.200  0.750  0.050  0.050
+   21.835   48.584   21.103   0.200   22.026   47.272   20.344   0.200  0.625  0.625  0.625
+   22.026   47.272   20.344   0.200   22.502   47.375   19.800   0.200  0.625  0.625  0.625
+   22.502   47.375   19.800   0.200   22.979   47.477   19.256   0.200  0.750  0.050  0.050
+   22.026   47.272   20.344   0.200   20.741   46.846   19.619   0.200  0.625  0.625  0.625
+   20.741   46.846   19.619   0.200   20.817   46.206   19.308   0.200  0.625  0.625  0.625
+   20.817   46.206   19.308   0.200   20.894   45.566   18.998   0.200  0.750  0.050  0.050
+   27.252   45.209   17.378   0.200   26.959   46.528   18.117   0.200  0.625  0.625  0.625
+   27.252   45.209   17.378   0.200   26.978   45.246   16.714   0.200  0.625  0.625  0.625
+   26.978   45.246   16.714   0.200   26.703   45.283   16.050   0.200  0.750  0.050  0.050
+   27.252   45.209   17.378   0.200   27.965   45.129   17.333   0.200  0.625  0.625  0.625
+   27.965   45.129   17.333   0.200   28.678   45.048   17.287   0.200  0.750  0.050  0.050
+   26.959   46.528   18.117   0.200   27.281   46.496   18.765   0.200  0.625  0.625  0.625
+   27.281   46.496   18.765   0.200   27.603   46.464   19.414   0.200  0.125  0.125  1.000
+   26.959   46.528   18.117   0.200   25.446   46.643   18.176   0.200  0.625  0.625  0.625
+   27.603   46.464   19.414   0.200   28.058   46.871   19.670   0.200  0.125  0.125  1.000
+   28.058   46.871   19.670   0.200   28.513   47.279   19.926   0.200  0.625  0.625  0.625
+   28.513   47.279   19.926   0.200   28.691   47.805   19.618   0.200  0.625  0.625  0.625
+   28.691   47.805   19.618   0.200   28.869   48.331   19.310   0.200  0.750  0.050  0.050
+   28.513   47.279   19.926   0.200   29.119   46.778   21.241   0.200  0.625  0.625  0.625
+   25.446   46.643   18.176   0.200   25.304   47.286   18.456   0.200  0.625  0.625  0.625
+   25.304   47.286   18.456   0.200   25.162   47.930   18.736   0.200  0.750  0.050  0.050
+   25.446   46.643   18.176   0.200   24.811   46.603   16.773   0.200  0.625  0.625  0.625
+   24.811   46.603   16.773   0.200   24.981   47.204   16.425   0.200  0.625  0.625  0.625
+   24.981   47.204   16.425   0.200   25.151   47.806   16.078   0.200  0.750  0.050  0.050
+   24.811   46.603   16.773   0.200   25.258   45.344   16.062   0.200  0.625  0.625  0.625
+   25.258   45.344   16.062   0.200   25.980   45.313   16.056   0.200  0.625  0.625  0.625
+   25.980   45.313   16.056   0.200   26.703   45.283   16.050   0.200  0.750  0.050  0.050
+   25.258   45.344   16.062   0.200   24.710   45.153   14.665   0.200  0.625  0.625  0.625
+   24.710   45.153   14.665   0.200   24.013   45.297   14.635   0.200  0.625  0.625  0.625
+   24.013   45.297   14.635   0.200   23.316   45.441   14.605   0.200  0.750  0.050  0.050
+   31.960   44.335   17.404   0.200   31.068   44.349   18.640   0.200  0.625  0.625  0.625
+   31.960   44.335   17.404   0.200   31.552   44.474   16.833   0.200  0.625  0.625  0.625
+   31.552   44.474   16.833   0.200   31.144   44.613   16.262   0.200  0.750  0.050  0.050
+   31.960   44.335   17.404   0.200   32.397   44.907   17.403   0.200  0.625  0.625  0.625
+   32.397   44.907   17.403   0.200   32.835   45.478   17.402   0.200  0.750  0.050  0.050
+   31.068   44.349   18.640   0.200   31.442   44.158   19.209   0.200  0.625  0.625  0.625
+   31.442   44.158   19.209   0.200   31.815   43.966   19.778   0.200  0.750  0.050  0.050
+   31.068   44.349   18.640   0.200   29.897   43.356   18.485   0.200  0.625  0.625  0.625
+   29.897   43.356   18.485   0.200   29.458   43.485   19.029   0.200  0.625  0.625  0.625
+   29.458   43.485   19.029   0.200   29.018   43.614   19.573   0.200  0.750  0.050  0.050
+   29.897   43.356   18.485   0.200   29.148   43.705   17.180   0.200  0.625  0.625  0.625
+   29.018   43.614   19.573   0.200   28.700   43.084   19.935   0.200  0.750  0.050  0.050
+   28.700   43.084   19.935   0.200   28.382   42.554   20.297   0.200  0.625  0.625  0.625
+   29.148   43.705   17.180   0.200   28.913   44.377   17.234   0.200  0.625  0.625  0.625
+   28.913   44.377   17.234   0.200   28.678   45.048   17.287   0.200  0.750  0.050  0.050
+   29.148   43.705   17.180   0.200   30.131   43.605   16.018   0.200  0.625  0.625  0.625
+   30.131   43.605   16.018   0.200   30.638   44.109   16.140   0.200  0.625  0.625  0.625
+   30.638   44.109   16.140   0.200   31.144   44.613   16.262   0.200  0.750  0.050  0.050
+   30.131   43.605   16.018   0.200   29.483   43.969   14.687   0.200  0.625  0.625  0.625
+   29.483   43.969   14.687   0.200   29.951   43.982   14.151   0.200  0.625  0.625  0.625
+   29.951   43.982   14.151   0.200   30.418   43.995   13.615   0.200  0.750  0.050  0.050
+   36.728   46.364   18.623   0.200   37.282   46.221   19.066   0.200  0.625  0.625  0.625
+   37.282   46.221   19.066   0.200   37.836   46.079   19.510   0.200  0.750  0.050  0.050
+   36.728   46.364   18.623   0.200   36.470   45.042   17.892   0.200  0.625  0.625  0.625
+   36.728   46.364   18.623   0.200   36.167   46.499   19.045   0.200  0.625  0.625  0.625
+   36.167   46.499   19.045   0.200   35.606   46.635   19.468   0.200  0.750  0.050  0.050
+   36.470   45.042   17.892   0.200   36.971   44.956   17.393   0.200  0.625  0.625  0.625
+   36.971   44.956   17.393   0.200   37.471   44.870   16.894   0.200  0.750  0.050  0.050
+   36.470   45.042   17.892   0.200   35.142   45.024   17.152   0.200  0.625  0.625  0.625
+   35.142   45.024   17.152   0.200   35.025   44.385   16.868   0.200  0.625  0.625  0.625
+   35.025   44.385   16.868   0.200   34.908   43.746   16.584   0.200  0.750  0.050  0.050
+   35.142   45.024   17.152   0.200   34.033   45.358   18.168   0.200  0.625  0.625  0.625
+   34.033   45.358   18.168   0.200   33.434   45.418   17.785   0.200  0.625  0.625  0.625
+   33.434   45.418   17.785   0.200   32.835   45.478   17.402   0.200  0.750  0.050  0.050
+   34.033   45.358   18.168   0.200   34.347   46.706   18.792   0.200  0.625  0.625  0.625
+   34.347   46.706   18.792   0.200   34.977   46.671   19.130   0.200  0.625  0.625  0.625
+   34.977   46.671   19.130   0.200   35.606   46.635   19.468   0.200  0.750  0.050  0.050
+   34.347   46.706   18.792   0.200   33.257   47.174   19.783   0.200  0.625  0.625  0.625
+   33.257   47.174   19.783   0.200   33.181   46.720   20.307   0.200  0.625  0.625  0.625
+   33.181   46.720   20.307   0.200   33.105   46.266   20.831   0.200  0.750  0.050  0.050
+   27.548   43.223   21.397   0.200   27.033   43.561   21.211   0.200  0.625  0.625  0.625
+   27.033   43.561   21.211   0.200   26.518   43.898   21.026   0.200  0.750  0.050  0.050
+   27.548   43.223   21.397   0.200   27.743   43.135   21.985   0.200  0.625  0.625  0.625
+   27.743   43.135   21.985   0.200   27.939   43.048   22.572   0.200  0.750  0.050  0.050
+   27.548   43.223   21.397   0.200   28.382   42.554   20.297   0.200  0.625  0.625  0.625
+   28.382   42.554   20.297   0.200   29.322   41.569   20.940   0.200  0.625  0.625  0.625
+   28.382   42.554   20.297   0.200   27.929   42.216   19.868   0.200  0.625  0.625  0.625
+   27.929   42.216   19.868   0.200   27.475   41.878   19.440   0.200  0.750  0.050  0.050
+   29.322   41.569   20.940   0.200   28.588   40.419   21.610   0.200  0.625  0.625  0.625
+   28.588   40.419   21.610   0.200   29.061   39.899   21.761   0.200  0.625  0.625  0.625
+   29.061   39.899   21.761   0.200   29.534   39.379   21.912   0.200  0.750  0.050  0.050
+   28.588   40.419   21.610   0.200   27.530   39.793   20.690   0.200  0.625  0.625  0.625
+   27.530   39.793   20.690   0.200   27.147   39.312   21.085   0.200  0.625  0.625  0.625
+   27.147   39.312   21.085   0.200   26.764   38.830   21.480   0.200  0.125  0.125  1.000
+   27.530   39.793   20.690   0.200   26.643   40.877   20.076   0.200  0.625  0.625  0.625
+   26.764   38.830   21.480   0.200   26.498   38.273   21.229   0.200  0.125  0.125  1.000
+   26.498   38.273   21.229   0.200   26.232   37.716   20.977   0.200  0.625  0.625  0.625
+   26.232   37.716   20.977   0.200   26.288   37.572   20.362   0.200  0.625  0.625  0.625
+   26.288   37.572   20.362   0.200   26.344   37.428   19.748   0.200  0.750  0.050  0.050
+   26.232   37.716   20.977   0.200   25.476   36.832   22.002   0.200  0.625  0.625  0.625
+   26.643   40.877   20.076   0.200   27.059   41.377   19.758   0.200  0.625  0.625  0.625
+   27.059   41.377   19.758   0.200   27.475   41.878   19.440   0.200  0.750  0.050  0.050
+   26.643   40.877   20.076   0.200   25.704   40.334   18.987   0.200  0.625  0.625  0.625
+   25.704   40.334   18.987   0.200   26.043   39.942   18.477   0.200  0.625  0.625  0.625
+   26.043   39.942   18.477   0.200   26.383   39.550   17.967   0.200  0.750  0.050  0.050
+   25.704   40.334   18.987   0.200   25.207   41.572   18.210   0.200  0.625  0.625  0.625
+   25.207   41.572   18.210   0.200   24.947   42.049   18.660   0.200  0.625  0.625  0.625
+   24.947   42.049   18.660   0.200   24.686   42.525   19.109   0.200  0.750  0.050  0.050
+   25.207   41.572   18.210   0.200   24.045   41.079   17.325   0.200  0.625  0.625  0.625
+   24.045   41.079   17.325   0.200   23.878   41.573   16.860   0.200  0.625  0.625  0.625
+   23.878   41.573   16.860   0.200   23.711   42.067   16.394   0.200  0.750  0.050  0.050
